# pydtl-relativepath

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  test_unittest.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: coverage.yml  lint.yml  package.yml  publish_release.yml  tests.yml
pydtl_relativepath/: __init__.py  pydtl_relativepath.py
src/pydtl_relativepath/: __init__.py  enums.py  pydtl_relativepath.py
tests/: test_pathobj.py
