[tool.poetry]
name = "pydtl-relativepath"
version = "0.1.0"
description = "python tool to solve many issues with relative paths and imports in your complex framework."
authors = ["Nanthagopal-Eswaran <nanthagopaleswaran@gmail.com>"]
maintainers = ["Nanthagopal-Eswaran <nanthagopaleswaran@gmail.com>"]
readme = "README.md"
packages = [{include = "pydtl_relativepath", from = "src"}]
license = "MIT"
repository = "https://github.com/python-dev-tools/pydtl-relativepath"
keywords = ["relativepath", "python", "pydtl", "python-dev-tools", "poetry", "pytest"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
"Source" = "https://github.com/python-dev-tools/pydtl-relativepath"
"Tracker" = "https://github.com/python-dev-tools/pydtl-relativepath/issues"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
tox = "^4.4.12"
mypy = "^1.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]